tests/snapshots/snapshot_port_scan__port_scan_in_progress_renders.snap
---
source: tests/snapshot_port_scan.rs
expression: term.backend()
---
"┌1 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   IP        Name       Hits  Services                                        █"
"│              ╭Port scan 10.0.0.3 (nas.local)───────────────────╮             █"
"│ █ 10.0.0.3  n│                                                 │             █"
"│              │ 1-1023                               1023 ports │             █"
"│              │ 64 workers   100ms   max 1.6s                   │             █"
"│              │                                                 │             █"
"│              │                                                 │             █"
"│              │                     4/1023                      │             █"
"│              │                                                 │             █"
"│              │ 22      ssh                                     │             █"
"│              │ 443     https                                   │             █"
"└──────────────│                                                 │─────────────┘"
"               │                                                 │              "
" Log Level: Inf│                                                 │              "
"               │ <Esc>: cancel                                   │              "
"               │                                                 │              "
"               ╰─────────────────────────────────────────────────╯              "
"                                                                                "
"                                                                                "
