tests/snapshots/snapshot_port_scan__port_scan_multi_category_results_render.snap
---
source: tests/snapshot_port_scan.rs
expression: term.backend()
---
"┌1 IPs discover╭Port scan 10.0.0.3 (nas.local)───────────────────╮───────v1.2.3┐"
"│   IP        N│                                                 │             █"
"│              │ 1-1023, 49152-65535                             │             █"
"│ █ 10.0.0.3  n│ 64 workers   100ms   max 27.2s                  │             █"
"│              │                                                 │             █"
"│              │                                                 │             █"
"│              │ 1m 40s                                          │             █"
"│              │                     7/17407                     │             █"
"│              │ 7 open ports                                    │             █"
"│              │                                                 │             █"
"│              │ System ports                                    │             █"
"│              │   22   ssh    631  ipp                          │             █"
"└──────────────│   80   http   993  imaps                        │─────────────┘"
"               │   443  https                                    │              "
" Log Level: Inf│ Dynamic ports                                   │              "
"               │   49152  -  51413  -                            │              "
"               │                                                 │              "
"               │ <Enter/Space>: back | <Ctrl-R>: rescan          │              "
"               │                                                 │              "
"               ╰─────────────────────────────────────────────────╯              "
