tests/snapshots/snapshot_port_scan__port_scan_results_render.snap
---
source: tests/snapshot_port_scan.rs
expression: term.backend()
---
"┌1 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   IP        Name       Hits  Services                                        █"
"│              ╭Port scan 10.0.0.3 (nas.local)───────────────────╮             █"
"│ █ 10.0.0.3  n│                                                 │             █"
"│              │ 1-1023                                          │             █"
"│              │ 64 workers   100ms   max 1.6s                   │             █"
"│              │                                                 │             █"
"│              │                                                 │             █"
"│              │ 1m 40s                                          │             █"
"│              │                     5/1023                      │             █"
"│              │ 3 open ports (1 filtered)                       │             █"
"│              │                                                 │             █"
"└──────────────│   22   ssh   443  https                         │─────────────┘"
"               │   80   http                                     │              "
" Log Level: Inf│                                                 │              "
"               │ <Enter/Space>: back | <Ctrl-R>: rescan          │              "
"               │                                                 │              "
"               ╰─────────────────────────────────────────────────╯              "
"                                                                                "
"                                                                                "
