tests/snapshots/snapshot_port_scan__port_scan_results_with_mdns_probe.snap
---
source: tests/snapshot_port_scan.rs
expression: term.backend()
---
"┌1 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   IP        Name       Hits  Services                                        █"
"│              ╭Port scan 10.0.0.3 (nas.local)───────────────────╮             █"
"│ █ 10.0.0.3  n│                                                 │             █"
"│              │ 1-1023                                          │             █"
"│              │ 64 workers   100ms   max 1.6s                   │             █"
"│              │                                                 │             █"
"│              │                                                 │             █"
"│              │ 1m 40s                                          │             █"
"│              │                     1/1023                      │             █"
"│              │ 1 open port                                     │             █"
"│              │ mDNS 5353/udp: responding (unicast & multicast) │             █"
"└──────────────│                                                 │─────────────┘"
"               │   22  ssh                                       │              "
" Log Level: Inf│                                                 │              "
"               │ <Enter/Space>: back | <Ctrl-R>: rescan          │              "
"               │                                                 │              "
"               ╰─────────────────────────────────────────────────╯              "
"                                                                                "
"                                                                                "
