tests/snapshots/snapshot_port_scan__port_scan_results_without_open_ports_render.snap
---
source: tests/snapshot_port_scan.rs
expression: term.backend()
---
"┌1 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   IP        Name       Hits  Services                                        █"
"│                                                                              █"
"│ █ 10.0.0.3  n╭Port scan 10.0.0.3 (nas.local)───────────────────╮             █"
"│              │                                                 │             █"
"│              │ 1-1023                                          │             █"
"│              │ 64 workers   100ms   max 1.6s                   │             █"
"│              │                                                 │             █"
"│              │                                                 │             █"
"│              │ 1m 40s                                          │             █"
"│              │                     2/1023                      │             █"
"│              │ 0 open ports (1 filtered)                       │             █"
"└──────────────│                                                 │─────────────┘"
"               │ No open ports                                   │              "
" Log Level: Inf│                                                 │              "
"               │ <Enter/Space>: back | <Ctrl-R>: rescan          │              "
"               │                                                 │              "
"               ╰─────────────────────────────────────────────────╯              "
"                                                                                "
"                                                                                "
