tests/snapshots/snapshot_port_scan__port_scan_setup_renders.snap
---
source: tests/snapshot_port_scan.rs
expression: term.backend()
---
"┌1 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   IP        Name       Hits  Services                                        █"
"│              ╭Port scan 10.0.0.3 (nas.local)───────────────────╮             █"
"│ █ 10.0.0.3  n│                                                 │             █"
"│              │                                                 │             █"
"│              │ 64 workers   100ms   max —                      │             █"
"│              │                                                 │             █"
"│              │                                                 │             █"
"│              │ ▶ [ ] System ports     1-1023                   │             █"
"│              │   [ ] User ports       1024-49151               │             █"
"│              │   [ ] Dynamic ports    49152-65535              │             █"
"│              │   [ ] Custom           22,80,443,8000-8100      │             █"
"└──────────────│                                                 │─────────────┘"
"               │   [ ] probe mDNS       (5353/udp)               │              "
" Log Level: Inf│                                                 │              "
"               │   [ Start scan ]                                │              "
"               │                                                 │              "
"               ╰─────────────────────────────────────────────────╯              "
"                                                                                "
"                                                                                "
